[gd_scene load_steps=7 format=3 uid="uid://cr4wh8k8gaysv"]

[ext_resource type="Script" path="res://Player/Attack/javelin.gd" id="1_ro7n8"]
[ext_resource type="AudioStream" uid="uid://ckro6v281rcab" path="res://Audio/SoundEffect/woosh.wav" id="3_6kycs"]
[ext_resource type="Texture2D" uid="uid://d1xtinovkw7yw" path="res://Textures/Items/Weapons/EAT.png" id="3_ui4t1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8pc46"]
radius = 20.0
height = 140.0

[sub_resource type="Animation" id="Animation_30x4w"]
resource_name = "EXPLOSION"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4pdfi"]
_data = {
"EXPLOSION": SubResource("Animation_30x4w")
}

[node name="Javelin" type="Area2D" groups=["attack"]]
top_level = true
scale = Vector2(0.1, 0.1)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ro7n8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8pc46")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="snd_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6kycs")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4pdfi")
}
speed_scale = 2.0

[node name="Explosion" type="Sprite2D" parent="."]
position = Vector2(10, -20)
scale = Vector2(0.138644, 0.138644)
texture = ExtResource("3_ui4t1")
hframes = 3
vframes = 4

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
